--- a/week2_screencast_jdbc/WebContent/WEB-INF/web.xml
+++ b/week2_screencast_jdbc/WebContent/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>Test</display-name>
 
-<listener>
-<listener-class>config.InitDaoFactory</listener-class>
-</listener>
+	<listener>
+		<!-- Instanciate once the DAOFactory for the scope of the web app -->
+		<listener-class>config.InitDaoFactory</listener-class>
+	</listener>
+
+</web-app>
