Add ?autoReconnect=true&useSSL=false to the url to diasable a server SSL warning

--- a/week2_screencast_jdbc/src/dao/dao.properties
+++ b/week2_screencast_jdbc/src/dao/dao.properties
@@ -1,4 +1,4 @@
-url = jdbc:mysql://localhost:3306/users
+url = jdbc:mysql://localhost:3306/users?autoReconnect=true&useSSL=false
 driver = com.mysql.jdbc.Driver
-nomutilisateur = patrick
-motdepasse = pat123
+username = patrick
+password = pat123
