--- a/week3/exo301/pom.xml
+++ b/week3/exo301/pom.xml
@@ -15,6 +15,13 @@
   </properties>
   
   <dependencies>
+  
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.25</version>
+	</dependency>  
 
 <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
 <dependency>
@@ -23,6 +30,14 @@
     <version>1.0.0.Final</version>
 </dependency>
 
+  <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>1.7.25</version>
+    <scope>runtime</scope>
+  </dependency>
+
     
     <dependency>
         <groupId>junit</groupId>
@@ -30,6 +45,20 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+    
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	    <version>5.2.10.Final</version>
+	    <scope>runtime</scope>
+	</dependency>    
+    
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.196</version>
+	    <scope>runtime</scope>
+	</dependency>    
     
   </dependencies>
 
