Comment artifactId code-check. Probability no use

--- a/week4/exo401/pom.xml
+++ b/week4/exo401/pom.xml
@@ -35,12 +35,13 @@
         <scope>test</scope>
     </dependency>
     
-    <dependency>
+<!--     <dependency>
         <groupId>fr.eservices</groupId>
         <artifactId>code-check</artifactId>
         <version>5.1.0</version>
         <scope>test</scope>
     </dependency>
+-->
     
 	<dependency>
 	    <groupId>org.hibernate</groupId>
