--- a/week4/exo402/pom.xml
+++ b/week4/exo402/pom.xml
@@ -5,8 +5,10 @@
       
   <groupId>fr.eservices</groupId>
   <artifactId>exo402</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+
+  <description>Utilisation de  spring-webmvc avec les  DAO JPA de l'exercice 301</description>
   
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -42,6 +44,12 @@
         <version>5.1.0</version>
         <scope>test</scope>
     </dependency> -->
+    
+	<dependency>
+		<groupId>fr.eservices</groupId>
+		<artifactId>drive-model</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>	    
     
 	<dependency>
 	    <groupId>javax.servlet</groupId>
