--- a/week4/exo402/pom.xml
+++ b/week4/exo402/pom.xml
@@ -45,17 +45,38 @@
         <scope>test</scope>
     </dependency> -->
     
+<!--
 	<dependency>
 		<groupId>fr.eservices</groupId>
 		<artifactId>drive-model</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</dependency>	    
-    
+-->
+  
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.1.0</version>
 	    <scope>provided</scope>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.hibernate.javax.persistence</groupId>
+	    <artifactId>hibernate-jpa-2.1-api</artifactId>
+	    <version>1.0.0.Final</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.196</version>
+	    <scope>runtime</scope>
+	</dependency>	
+
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.4.9.Final</version>
 	</dependency>
 
   </dependencies>
