--- a/week4/exo402/pom.xml
+++ b/week4/exo402/pom.xml
@@ -79,6 +79,12 @@
 	    <version>5.4.9.Final</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.10.3</version>
+	</dependency>
+
   </dependencies>
 
 </project>
