--- a/week5/sc15/pom.xml
+++ b/week5/sc15/pom.xml
@@ -15,6 +15,9 @@
 	<maven.compiler.target>1.8</maven.compiler.target>
 	<spring.version>4.3.9.RELEASE</spring.version>
 	<failOnMissingWebXml>false</failOnMissingWebXml>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	
 </properties>
 
 <dependencies>
@@ -48,7 +51,7 @@
 	    <groupId>jstl</groupId>
 	    <artifactId>jstl</artifactId>
 	    <version>1.2</version>
-	    <scope>runtime</scope>
+		<scope>runtime</scope>
 	</dependency>
 
 	
